Промежуточные стили header + section.banner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
+	<header class="main-header header-fixed">
+		<div class="main-header-row container">
+      <a href="main-headder-logo"><img src="img/logo.png" width="211" height="55" alt="Mobileapp"></a>
+      <nav class="header-navigation">
+            <ul class="header-list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Download</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+      </nav>    
+    </div>
+	</header>
+  <section class="banner">
+    <div class="container">
+      <div class="description">
+        <h1>Chocolate pudding dessert jelly</h1>
+        <p>Fruitcake donut gummies. Candy liquorice biscuit. Sugar plum jelly gummi bears brownie toffee cupcake caramels brownie cookie.</p>
+        <a href="#">Download on Appstore</a>
+      </div>
+      <img src="img/mobile.png" alt="Phone">
+    </div>
+  </section>
 </body>
 </html>
