Верстка раздела .features

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </nav>    
     </div>
 	</header>
+  <!-- BANNER -->
   <section class="banner">
     <div class="banner-columns container">
       <div class="banner-description">
@@ -32,6 +33,33 @@
         <a class="banner-btn" href="#"><i class="fa fa-mobile fa-3x" aria-hidden="true"></i> Download on Appstore</a>
       </div>
       <img class="banner-phone" src="img/mobile.png" alt="Phone">
+    </div>
+  </section>
+  <!-- FEATURES -->
+  <section class="features">
+    <div class="container">
+      <h2 class="features-heading">App Features</h2>
+      <p class="features-text">Donut sesame snaps donut pie dessert chupa chups wafer dragée. Gummies fruitcake
+      chupa chups cookie liquorice. Chocolate pudding dessert jelly fruitcake tart jelly wafer.
+      Sweet roll carrot cake croissant.
+      </p>
+      <ul class="features-list">
+        <li class="features-list-item">
+          <img src="img/f1.png" alt="Features #1" width="181" height="181">
+          <h3 class="features-list-heading">Scalable</h3>
+          <p class="features-list-text">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </li>
+        <li class="features-list-item">
+          <img src="img/f2.png" alt="Features #2" width="181" height="181">
+          <h3 class="features-list-heading">Instant</h3>
+          <p class="features-list-text">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </li>
+        <li class="features-list-item">
+          <img src="img/f3.png" alt="Features #3" width="181" height="181">
+          <h3 class="features-list-heading">Something</h3>
+          <p class="features-list-text">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </li>
+      </ul>
     </div>
   </section>
 
