Верстка раздела .download

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
       </ul>
     </div>
   </section>
+  <section class="download">
+    <div class="container">
+      <h2 class="download-heading"><span class="red-text">Hocolate</span> pudding
+          dessert jelly <span class="red-text">fruit
+          cake tart jelly wa</span>fer.
+      </h2>
+      <p class="download-text">Donut cupcake lemon drops dragée<br>
+        liquorice apple pie powder. Topping<br>
+        sweet lollipop soufflé chocolate<br>
+        liquorice candy canes. 
+      </p>
+      <a class="download-btn" href="#">Download</a>
+    </div>
+  </section>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
