Верстка .blog + bxslider

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
 </head>
 <body>
 	<header class="main-header">
@@ -76,10 +77,33 @@
       <a class="download-btn" href="#">Download</a>
     </div>
   </section>
+  <div class="blog">
+    <div class="container">
+      <ul class="blog-list bxslider">
+        <li class="blog-list-item">
+          <p>“Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan. ”</p>
+          <span>Brenda Gonzales, Stockapps</span>
+        </li>
+        <li class="blog-list-item">
+          <p>“Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan. ”</p>
+          <span>Brenda Gonzales, Stockapps</span>
+        </li>
+        <li class="blog-list-item">
+          <p>“Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan. ”</p>
+          <span>Brenda Gonzales, Stockapps</span>
+        </li>
+        <li class="blog-list-item">
+          <p>“Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan. ”</p>
+          <span>Brenda Gonzales, Stockapps</span>
+        </li>
+      </ul>
+    </div>
+  </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+<script src="js/jquery.bxslider.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
