--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
   </head>
   <body>
     <!-- HEADER -->
     <header class="main-header">
       <div class="main-header-row container">
         <a href="main-header-logo"><img src="img/logo.png" width="211" height="55" alt="Mobileapp"></a>
-        <nav class="header-navigation">
+        <nav class="header-navigation nav-collapse">
           <ul class="header-list">
             <li class="header-list-item"><a class="active" href="#">Home</a></li>
             <li class="header-list-item"><a href="#">Features</a></li>
@@ -133,6 +134,7 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
     <script src="js/jquery.bxslider.js"></script>
+    <script src="js/fixed-responsive-nav.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
