--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- HEADER -->
     <header class="main-header">
       <div class="main-header-row container">
-        <a href="main-header-logo"><img class="media-width" src="img/logo.png" width="211" height="55" alt="Mobileapp"></a>
+        <a class="main-header-logo" href="#"><img class="media-width" src="img/logo.png" width="211" height="55" alt="Mobileapp"></a>
         <nav class="header-navigation nav-collapse">
           <ul class="header-list">
             <li class="header-list-item"><a class="active" href="#">Home</a></li>
